<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="20dp"

    tools:context=".player_name_popup">
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/p1InputView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:boxCornerRadiusTopStart="30dp"
    app:boxCornerRadiusBottomEnd="30dp"
    app:boxStrokeWidth="2dp"
    app:layout_constraintBottom_toTopOf="@id/p2InputView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/p1Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player1_name"
        android:inputType="textCapWords"
        android:textColor="@color/black" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/p2InputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/p1InputView">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/p2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_2_name"
            android:inputType="textCapWords"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ok"
        android:backgroundTint="@color/scissorBtn"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2InputView" />


</androidx.constraintlayout.widget.ConstraintLayout>