<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bgcolor"
    android:layout_height="match_parent"

    android:padding="10dp"
    tools:context=".Playwithfriend">

    <View
        android:id="@+id/centerView"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_margin="10dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/playerName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName1"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/playerName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/playerName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/player1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <LinearLayout
        android:id="@+id/player2View"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569">

        <ImageView
            android:id="@+id/p2_star1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="1dp"
            android:src="@drawable/empty_star" />

        <ImageView
            android:id="@+id/p2_star2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="1dp"
            android:src="@drawable/empty_star" />

        <ImageView
            android:id="@+id/p2_star3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="1dp"
            android:src="@drawable/empty_star" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/player1View"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467">

        <ImageView
            android:id="@+id/p1_star1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="1dp"
            android:src="@drawable/empty_star" />

        <ImageView
            android:id="@+id/p1_star2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="1dp"
            android:src="@drawable/empty_star" />

        <ImageView
            android:id="@+id/p1_star3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="1dp"
            android:src="@drawable/empty_star" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnViewP2"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/rockBtnP2"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/rockBtn"
            android:text="@string/rock"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/paperBtnP2"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/paperBtn"
            android:text="@string/paper"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/scissorBtnP2"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/scissorBtn"
            android:text="@string/scissor"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnViewP1"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026">

        <Button
            android:id="@+id/rockBtnP1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/rockBtn"
            android:text="@string/rock"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/paperBtnP1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/paperBtn"
            android:text="@string/paper"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/scissorBtnP1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/scissorBtn"
            android:text="@string/scissor"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/conImgP1"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:rotation="90"
        app:layout_constraintBottom_toTopOf="@+id/player1View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewP1"
        app:layout_constraintVertical_bias="0.68"
        tools:src="@drawable/rock" />

    <ImageView
        android:id="@+id/conImgP2"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2View"
        app:layout_constraintVertical_bias="0.205"
        tools:src="@drawable/paper" />

    <TextView
        android:id="@+id/readyP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:rotation="180"
        android:text="@string/Ready"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/conImgP1"
        app:layout_constraintTop_toBottomOf="@+id/btnViewP1"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/readyP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Ready"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/conImgP2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2View"
        app:layout_constraintVertical_bias="0.35" />
</androidx.constraintlayout.widget.ConstraintLayout>